# dlh-pv

./: .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS_COMPLETION_REPORT.md  BUG_REPORT_API_TIMESTAMP_ISSUE.md  CONTRIBUTING.md  FORECAST_PIPELINE.md  Makefile  POWER_BI_CONTEXT.md  PR_38_FIXES_SUMMARY.md  README.md  SCRIPTS_USAGE.md  SILVER_LAYER_IMPROVEMENTS.md  SILVER_LAYER_SQL_ANALYSIS.md  Silver_Quality_Validation.ipynb  TRAINING_LOGIC_EXPLAINED.md  VALIDATION_REPORT_SILVER_CODE.md  ZERO_ENERGY_WITH_RADIATION_EXPLANATION.md  bronze_hourly_incremental_flow-deployment.yaml  check_forecast_duplicates.sh  check_forecast_summary.sh  check_regression_results.sh  check_syntax.py  docker-compose.yml  eda_bronze_to_silver_analysis.ipynb  outlier_report.csv  pyproject.toml  query_forecast.sh  quick_regression.sh  requirements-dev.txt  requirements.txt  requirements_ml.txt  run_forecast_pipeline.sh  run_ml_tests.sh  setup_dim_feature_importance.sh  test_ml_pipeline.sh  test_refactor_quick.py  test_training_with_csv.py
.githooks/: pre-push
config/: ml_features.yaml  ml_hyperparams.yaml  silver_validation_rules.yaml
doc/: ARCHITECTURE.md  BEFORE_AFTER_COMPARISON.md  CODE_CLEANUP_DEAD_CODE_REMOVAL.md  CODE_IMPROVEMENTS_OPTIMIZATION.md  DATA_GOVERNANCE_POLICY.md  DATA_QUALITY_RECOMMENDATIONS.md  ENERGY_RADIATION_CORRELATION_ANALYSIS_REPORT.md  KHOA_RESPONSIBILITIES_REPORT.md  KHOA_SUMMARY.md  ML_PIPELINE_REFACTOR.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_QUICK_REFERENCE.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE3_COMPREHENSIVE_ANALYSIS.md  README.md  REFACTOR_SUMMARY.md  SCRIPT_SLIDE_7_10.md  SILVER_LAYER_ANALYSIS_SUMMARY.md  SILVER_LAYER_IMPLEMENTATION_GUIDE.md  TECHNOLOGY_CHOICES.md  VISUAL_GUIDE_IMPROVEMENTS.md  (+1 more)
infra/: README.md
(+326 files in other folders)
