[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pv-lakehouse"
version = "0.0.1"
requires-python = ">=3.11"


[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["docker/", "infra/"]

[tool.ruff.lint]
extend-select = ["I"]
